# sanaap-backend-challenge-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
apps/dms_admin/: apps.py  urls.py
apps/dms_admin/management/commands/: createadmin.py
apps/dms_admin/serializers/: document.py  user.py
apps/dms_admin/tests/: test_document.py  test_user.py
apps/dms_admin/views/: __init__.py  document.py  user.py
apps/document/: urls.py
apps/document/migrations/: 0001_initial.py
apps/document/models/: document.py
apps/document/serializers/: __init__.py  document.py
apps/document/tests/: test_document.py
apps/document/views/: __init__.py  document.py
apps/user/: choices.py  urls.py
apps/user/migrations/: 0001_initial.py
apps/user/models/: user.py
common/: validators.py
core/: base_model.py  pagination_handler.py  permission.py
dms/: settings.py  urls.py
